--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <p class="lead">We worked with WebGL guru <a target="_blank" href="http://www.twitter.com/auradeluxe">Tony Parisi</a> to create a virtual reality app store for Dodocase's new DIYVR initiative.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive rounded shadow" src="img/dodovr.gif" alt="">
+                    <a href = "http://vizi-inc.github.io/DodoTwo/" target = "blank"><img class="img-responsive rounded shadow" src="img/dodovr.gif" alt=""></a>a
                 </div>
             </div>
 
@@ -133,9 +133,9 @@
     </div>
     <!-- /.content-section-a -->
 
-    <div class="banner">
+ <!--    <div class="banner">
 
-    </div>
+    </div> -->
     <!-- /.banner -->
 
 
