first draft complete

--- a/index.html
+++ b/index.html
@@ -75,11 +75,12 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">DodoCase VR App store</h2>
-                    <p class="lead">We worked with WebGL guru <a target="_blank" href="http://www.twitter.com/auradeluxe">Tony Parisi</a> to create a virtual reality app store for Dodocase's new DIYVR initiative.</p>
+                    <h2 class="section-heading">DodoCase VR App Store</h2>
+                    <p class="lead">We worked with WebGL guru <a target="_blank" href="http://www.twitter.com/auradeluxe">Tony Parisi</a> to create a virtual reality app store for Dodocase's new DIYVR headset.</p>
+                    <a href = "http://vizi-inc.github.io/DodoTwo/" target = "blank"><button class= "btn btn-primary btn-sm pull-left">Demo</button></a>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <a href = "http://vizi-inc.github.io/DodoTwo/" target = "blank"><img class="img-responsive rounded shadow" src="img/dodovr.gif" alt=""></a>a
+                    <a href = "http://vizi-inc.github.io/DodoTwo/" target = "blank"><img class="img-responsive rounded shadow" src="img/dodovr.gif" alt=""></a>
                 </div>
             </div>
 
@@ -97,11 +98,12 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Information Diving</h2>
-                    <p class="lead">We worked with Mozilla VR researcher Josh Carpenter to create a VR data visualization engine for <a target="_blank" href="http://mozvr.com">MozVR</a>, Mozilla's "VR website about VR websites."</p>
+                    <h2 class="section-heading">Mozilla Data-Visualization Engine</h2>
+                    <p class="lead">We worked with Mozilla VR researcher Josh Carpenter to create a VR data visualization engine for <a target="_blank" href="http://mozvr.com">MozVR</a>, Mozilla's virtual reality initiative.</p>
+                    <a href = "http://mozvr.com/" target = "blank"><button class= "btn btn-primary btn-sm pull-left">Demo</button></a>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive rounded shadow" src="img/infodiving.gif" alt="">
+                    <a href="http://mozvr.com" target="blank"><img class="img-responsive rounded shadow" src="img/infodiving.gif" alt=""></a>
                 </div>
             </div>
 
@@ -119,11 +121,12 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Vizi's Website</h2>
-                    <p class="lead">We created the 3D website for WebGL company Vizi.</p>
+                    <h2 class="section-heading">Vizi's 3D Website</h2>
+                    <p class="lead">We designed and built Vizi's homepage, which features innovative, custom-made 3D UX elements.</p>
+                    <a href = "http://vizi-inc.github.io/vizi_web" target = "blank"><button class= "btn btn-primary btn-sm pull-left">Demo</button></a>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive rounded shadow" src="img/vizi.gif" alt="">
+                    <a href="http://vizi-inc.github.io/vizi_web" target="blank"><img class="img-responsive rounded shadow" src="img/vizi.gif" alt=""></a>
                 </div>
             </div>
 
