--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Mozilla Data-Visualization Engine</h2>
-                    <p class="lead">We worked with Mozilla VR researcher Josh Carpenter to create a VR data visualization engine for <a target="_blank" href="http://mozvr.com">MozVR</a>, Mozilla's virtual reality initiative.</p>
+                    <p class="lead">We worked with Mozilla VR researcher Josh Carpenter to create a VR data visualization engine for <a target="_blank" href="http://mozvr.com">MozVR</a>, Mozilla's virtual reality initiative. <em class = "small-note"> (Oculus Rift required)</em></p>
                     <a href = "http://mozvr.com/" target = "blank"><button class= "btn btn-primary btn-sm pull-left">Demo</button></a>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
