--- a/index.html
+++ b/index.html
@@ -3,38 +3,37 @@
 
 <head>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <title>VR-UX</title>
+  <title>VR-UX</title>
 
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap Core CSS -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom CSS -->
-    <link href="css/landing-page.css" rel="stylesheet">
+  <!-- Custom CSS -->
+  <link href="css/landing-page.css" rel="stylesheet">
 
-    <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+  <!-- Custom Fonts -->
+  <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+        <![endif]-->
 
-</head>
+      </head>
 
-<body>
+      <body>
 
 
-    <!-- Header -->
-    <div class="intro-header">
+ <!--    <div class="intro-header">
 
         <div class="container">
 
@@ -45,109 +44,117 @@
                         <h3>Crafting amazing VR experiences</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
-                        <!--     <li>
-                                <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                            </li>
-                            <li> -->
-                   <!--              <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                            </li> -->
-                <!--             <li>
-                                <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
-                            </li> -->
                         </ul>
                     </div>
                 </div>
             </div>
 
         </div>
-        <!-- /.container -->
 
+      </div> -->
+      <div id = "canvas-container">
+      <div class = "intro-header">
+         <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="intro-message">
+                <h1>VR-UX</h1>
+                <h3>Crafting amazing VR experiences</h3>
+                <hr class="intro-divider">
+                <ul class="list-inline intro-social-buttons">
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <!-- /.intro-header -->
 
-    <!-- Page Content -->
 
     <div class="content-section-a">
 
-        <div class="container">
+      <div class="container">
 
-            <div class="row">
-                <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">DodoCase VR App Store</h2>
-                    <p class="lead">We worked with WebGL guru <a target="_blank" href="http://www.twitter.com/auradeluxe">Tony Parisi</a> to create a virtual reality app store for Dodocase's new DIYVR headset.</p>
-                    <a href = "http://vizi-inc.github.io/DodoTwo/" target = "blank"><button class= "btn btn-primary btn-sm pull-left">Demo</button></a>
-                </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <a href = "http://vizi-inc.github.io/DodoTwo/" target = "blank"><img class="img-responsive rounded shadow" src="img/dodovr.gif" alt=""></a>
-                </div>
-            </div>
-
+        <div class="row">
+          <div class="col-lg-5 col-sm-6">
+            <hr class="section-heading-spacer">
+            <div class="clearfix"></div>
+            <h2 class="section-heading">DodoCase VR App Store</h2>
+            <p class="lead">We worked with WebGL guru <a target="_blank" href="http://www.twitter.com/auradeluxe">Tony Parisi</a> to create a virtual reality app store for Dodocase's new DIYVR headset.</p>
+            <a href = "http://vizi-inc.github.io/DodoTwo/" target = "blank"><button class= "btn btn-primary btn-sm pull-left">Demo</button></a>
+          </div>
+          <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+            <a href = "http://vizi-inc.github.io/DodoTwo/" target = "blank"><img class="img-responsive rounded shadow" src="img/dodovr.gif" alt=""></a>
+          </div>
         </div>
-        <!-- /.container -->
+
+      </div>
+      <!-- /.container -->
 
     </div>
     <!-- /.content-section-a -->
 
     <div class="content-section-b">
 
-        <div class="container">
+      <div class="container">
 
-            <div class="row">
-                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">Mozilla Data-Visualization Engine</h2>
-                    <p class="lead">We worked with Mozilla VR researcher Josh Carpenter to create a VR data visualization engine for <a target="_blank" href="http://mozvr.com">MozVR</a>, Mozilla's virtual reality initiative. <em class = "small-note"> (Oculus Rift required)</em></p>
-                    <a href = "http://mozvr.com/" target = "blank"><button class= "btn btn-primary btn-sm pull-left">Demo</button></a>
-                </div>
-                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <a href="http://mozvr.com" target="blank"><img class="img-responsive rounded shadow" src="img/infodiving.gif" alt=""></a>
-                </div>
-            </div>
-
+        <div class="row">
+          <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+            <hr class="section-heading-spacer">
+            <div class="clearfix"></div>
+            <h2 class="section-heading">Mozilla Data-Visualization Engine</h2>
+            <p class="lead">We worked with Mozilla VR researcher Josh Carpenter to create a VR data visualization engine for <a target="_blank" href="http://mozvr.com">MozVR</a>, Mozilla's virtual reality initiative. <em class = "small-note"> (Oculus Rift required)</em></p>
+            <a href = "http://mozvr.com/" target = "blank"><button class= "btn btn-primary btn-sm pull-left">Demo</button></a>
+          </div>
+          <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+            <a href="http://mozvr.com" target="blank"><img class="img-responsive rounded shadow" src="img/infodiving.gif" alt=""></a>
+          </div>
         </div>
-        <!-- /.container -->
+
+      </div>
+      <!-- /.container -->
 
     </div>
     <!-- /.content-section-b -->
 
     <div class="content-section-a">
 
-        <div class="container">
+      <div class="container">
 
-            <div class="row">
-                <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">Vizi's 3D Website</h2>
-                    <p class="lead">We designed and built Vizi's homepage, which features innovative, custom-made 3D UX elements.</p>
-                    <a href = "http://vizi-inc.github.io/vizi_web" target = "blank"><button class= "btn btn-primary btn-sm pull-left">Demo</button></a>
-                </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <a href="http://vizi-inc.github.io/vizi_web" target="blank"><img class="img-responsive rounded shadow" src="img/vizi.gif" alt=""></a>
-                </div>
-            </div>
-
+        <div class="row">
+          <div class="col-lg-5 col-sm-6">
+            <hr class="section-heading-spacer">
+            <div class="clearfix"></div>
+            <h2 class="section-heading">Vizi's 3D Website</h2>
+            <p class="lead">We designed and built Vizi's homepage, which features innovative, custom-made 3D UX elements.</p>
+            <a href = "http://vizi-inc.github.io/vizi_web" target = "blank"><button class= "btn btn-primary btn-sm pull-left">Demo</button></a>
+          </div>
+          <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+            <a href="http://vizi-inc.github.io/vizi_web" target="blank"><img class="img-responsive rounded shadow" src="img/vizi.gif" alt=""></a>
+          </div>
         </div>
-        <!-- /.container -->
+
+      </div>
+      <!-- /.container -->
 
     </div>
     <!-- /.content-section-a -->
 
  <!--    <div class="banner">
 
-    </div> -->
-    <!-- /.banner -->
+</div> -->
+<!-- /.banner -->
 
 
 
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+<!-- jQuery -->
+<script src="js/jquery.js"></script>
+<script src="js/three.js"></script>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+
+<!-- Bootstrap Core JavaScript -->
+<script src="js/bootstrap.min.js"></script>
+<script src="js/sunset.js"></script>
 
 </body>
 
