--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
 
-      </head>
+</head>
 
       <body>
 
@@ -53,7 +53,7 @@
 
       </div> -->
       <div id = "canvas-container">
-      <div class = "intro-header">
+        <div class = "intro-header">
          <div class="container">
           <div class="row">
             <div class="col-lg-12">
@@ -149,11 +149,11 @@
 
 <!-- jQuery -->
 <script src="js/jquery.js"></script>
-<script src="js/three.js"></script>
-
-
 <!-- Bootstrap Core JavaScript -->
 <script src="js/bootstrap.min.js"></script>
+<script src="js/three.js"></script>
+<script src="js/Mirror.js"></script>
+<script src="js/WaterShader.js"></script>
 <script src="js/sunset.js"></script>
 
 </body>
