--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
 <!-- Bootstrap Core JavaScript -->
 <script src="js/bootstrap.min.js"></script>
 <script src="js/three.js"></script>
+<script src="js/OrbitControls.js"></script>
 <script src="js/Mirror.js"></script>
 <script src="js/WaterShader.js"></script>
 <script src="js/sunset.js"></script>
