--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
   <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
+  <script src="js/three.js"></script>
+  <script src="js/Mirror.js"></script>
+  <script src="js/WaterShader.js"></script>
+  <script src="js/sunset.js"></script>
+
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -31,44 +36,27 @@
 </head>
 
       <body>
+    <div id="canvas-container"></div>
 
 
- <!--    <div class="intro-header">
+     <div class = "intro-header"></div>
 
+      <div class = "intro-message-container">
         <div class="container">
-
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="intro-message">
-                        <h1>VR-UX</h1>
-                        <h3>Crafting amazing VR experiences</h3>
-                        <hr class="intro-divider">
-                        <ul class="list-inline intro-social-buttons">
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
-      </div> -->
-      <div id = "canvas-container">
-        <div class = "intro-header">
-         <div class="container">
           <div class="row">
             <div class="col-lg-12">
               <div class="intro-message">
                 <h1>VR-UX</h1>
                 <h3>Crafting amazing VR experiences</h3>
                 <hr class="intro-divider">
-                <ul class="list-inline intro-social-buttons">
-                </ul>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
+
+
+
 
 
     <div class="content-section-a">
@@ -151,11 +139,14 @@
 <script src="js/jquery.js"></script>
 <!-- Bootstrap Core JavaScript -->
 <script src="js/bootstrap.min.js"></script>
-<script src="js/three.js"></script>
-<script src="js/OrbitControls.js"></script>
-<script src="js/Mirror.js"></script>
-<script src="js/WaterShader.js"></script>
-<script src="js/sunset.js"></script>
+
+
+<script>
+  var sunset = new Sunset();
+  $(document).ready(function(){
+    $('.intro-header').fadeOut(800)
+  });
+</script>
 
 </body>
 
