--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
   <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
-  <script src="js/three.js"></script>
-  <script src="js/Mirror.js"></script>
-  <script src="js/WaterShader.js"></script>
-  <script src="js/sunset.js"></script>
+
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -69,7 +66,7 @@
             <div class="clearfix"></div>
             <h2 class="section-heading">DodoCase VR App Store</h2>
             <p class="lead">We worked with WebGL guru <a target="_blank" href="http://www.twitter.com/auradeluxe">Tony Parisi</a> to create a virtual reality app store for Dodocase's new DIYVR headset.</p>
-            <a href = "http://vizi-inc.github.io/DodoTwo/" target = "blank"><button class= "btn btn-primary btn-sm pull-left">Demo</button></a>
+            <a href = "http://vizi-inc.github.io/DodoTwo/" target = "blank"><button class= "btn btn-primary btn-sm pull-left demo-button">Demo</button></a>
           </div>
           <div class="col-lg-5 col-lg-offset-2 col-sm-6">
             <a href = "http://vizi-inc.github.io/DodoTwo/" target = "blank"><img class="img-responsive rounded shadow" src="img/dodovr.gif" alt=""></a>
@@ -92,7 +89,7 @@
             <div class="clearfix"></div>
             <h2 class="section-heading">Mozilla Data-Visualization Engine</h2>
             <p class="lead">We worked with Mozilla VR researcher Josh Carpenter to create a VR data visualization engine for <a target="_blank" href="http://mozvr.com">MozVR</a>, Mozilla's virtual reality initiative. <em class = "small-note"> (Oculus Rift required)</em></p>
-            <a href = "http://mozvr.com/" target = "blank"><button class= "btn btn-primary btn-sm pull-left">Demo</button></a>
+            <a href = "http://mozvr.com/" target = "blank"><button class= "btn btn-primary btn-sm pull-left demo-button">Demo</button></a>
           </div>
           <div class="col-lg-5 col-sm-pull-6  col-sm-6">
             <a href="http://mozvr.com" target="blank"><img class="img-responsive rounded shadow" src="img/infodiving.gif" alt=""></a>
@@ -115,7 +112,7 @@
             <div class="clearfix"></div>
             <h2 class="section-heading">Vizi's 3D Website</h2>
             <p class="lead">We designed and built Vizi's homepage, which features innovative, custom-made 3D UX elements.</p>
-            <a href = "http://vizi-inc.github.io/vizi_web" target = "blank"><button class= "btn btn-primary btn-sm pull-left">Demo</button></a>
+            <a href = "http://vizi-inc.github.io/vizi_web" target = "blank"><button class= "btn btn-primary btn-sm pull-left demo-button">Demo</button></a>
           </div>
           <div class="col-lg-5 col-lg-offset-2 col-sm-6">
             <a href="http://vizi-inc.github.io/vizi_web" target="blank"><img class="img-responsive rounded shadow" src="img/vizi.gif" alt=""></a>
@@ -139,6 +136,11 @@
 <script src="js/jquery.js"></script>
 <!-- Bootstrap Core JavaScript -->
 <script src="js/bootstrap.min.js"></script>
+
+<script src="js/three.js"></script>
+<script src="js/Mirror.js"></script>
+<script src="js/WaterShader.js"></script>
+<script src="js/sunset.js"></script>
 
 
 <script>
