--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
 
 
 
-
     <div class="content-section-a">
 
       <div class="container">
@@ -120,16 +119,9 @@
         </div>
 
       </div>
-      <!-- /.container -->
-
     </div>
-    <!-- /.content-section-a -->
 
- <!--    <div class="banner">
-
-</div> -->
-<!-- /.banner -->
-
+ 
 
 
 <!-- jQuery -->
@@ -141,6 +133,7 @@
 <script src="js/Mirror.js"></script>
 <script src="js/WaterShader.js"></script>
 <script src="js/sunset.js"></script>
+<script src="js/night.js"></script>
 
 
 <script>
