two threejs contexts

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 
       <body>
-    <div id="canvas-container"></div>
+    <div id="sunset-container"></div>
 
 
      <div class = "intro-header"></div>
@@ -121,7 +121,7 @@
       </div>
     </div>
 
- 
+   <div id="midnight-container"></div>
 
 
 <!-- jQuery -->
@@ -133,7 +133,7 @@
 <script src="js/Mirror.js"></script>
 <script src="js/WaterShader.js"></script>
 <script src="js/sunset.js"></script>
-<script src="js/night.js"></script>
+<script src="js/midnight.js"></script>
 
 
 <script>
