--- a/index.html
+++ b/index.html
@@ -132,16 +132,18 @@
 <script src="js/three.js"></script>
 <script src="js/Mirror.js"></script>
 <script src="js/WaterShader.js"></script>
-<script src="js/sunset.js"></script>
 <script src="js/midnight.js"></script>
-
+<script src="js/sunset.js"></script>
 
 <script>
   var sunset = new Sunset();
+  // var midnight = new Midnight();
   $(document).ready(function(){
     $('.intro-header').fadeOut(800)
   });
 </script>
+
+
 
 </body>
 
