--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
 <script>
   var sunset = new Sunset();
-  // var midnight = new Midnight();
+  var midnight = new Midnight();
   $(document).ready(function(){
     $('.intro-header').fadeOut(800)
   });
