--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
     </div>
 
    <div id="midnight-container"></div>
+   <audio src = "img/crickets.mp3" autoplay loop></audio>
 
 
 <!-- jQuery -->
