--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
 <script src="js/bootstrap.min.js"></script>
 
 <script src="js/three.js"></script>
+<script src="js/ShaderParticles.js"></script>
 <script src="js/Mirror.js"></script>
 <script src="js/WaterShader.js"></script>
 <script src="js/midnight.js"></script>
