--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <div class="row">
             <div class="col-lg-12">
               <div class="intro-message">
-                <h1>VR-UX</h1>
+                <h1>VR ENHANCED</h1>
                 <h3>Crafting amazing VR experiences</h3>
                 <hr class="intro-divider">
               </div>
