--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="col-lg-12">
               <div class="intro-message">
                 <h1>VR ENHANCED</h1>
-                <h3>Crafting amazing VR experiences!</h3>
+                <h3>Crafting amazing VR experiences</h3>
                 <hr class="intro-divider">
               </div>
             </div>
