change Tony link to thirdeye site

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
             <h2 class="section-heading">DodoCase VR App Store</h2>
-            <p class="lead">We worked with WebGL guru <a target="_blank" href="http://www.twitter.com/auradeluxe">Tony Parisi</a> to create a virtual reality app store for Dodocase's new DIYVR headset.</p>
+            <p class="lead">We worked with WebGL guru and ThirdEye founder <a target="_blank" href="http://www.thirdeye.gl/">Tony Parisi</a> to create a virtual reality app store for Dodocase's new DIYVR headset.</p>
             <a href = "http://vizi-inc.github.io/DodoTwo/" target = "blank"><button class= "btn btn-primary btn-sm pull-left demo-button">Demo</button></a>
           </div>
           <div class="col-lg-5 col-lg-offset-2 col-sm-6">
