--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@
       </div>
     </div>
     <div id="midnight-container"></div>
-   <audio src = "img/crickets.mp3" autoplay loop></audio>
+   <audio  autoplay loop>
+      <source src="img/crickets.mp3"/>
+   </audio>
 
 
 <!-- jQuery -->
